--- a/lab1.html
+++ b/lab1.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
  <meta charset="utf-8">
-<head>Tri.C Play it Safe</head>
+<head>
+ <title>Tri.C Play it Safe</title></head>
     <body>
         <h1>PAY IT</h1><p>
         <h1>SAFE</h1>
@@ -9,6 +10,6 @@
     <p>Visit <a href="http://www.tri-c.edu/paying-for-college">www.tri-c.edu/paying-for-college</a>for more information</p>
         <p><img src="https://www.tri-c.edu/_files/images/logo.png" alt="triclogo">
         </p>
-
+<p><a href="tel:+1-216-987-6000">+1 (216) 987-6000</a>
 </body>
 </html>
