--- a/lab1.html
+++ b/lab1.html
@@ -7,7 +7,7 @@
         <h1>SAFE</h1>
 <h2>Starting Feb. 1, 2019</h2>
         <p> For your security, we will no longer accept credit card payments over the phone. We will continue to accept cash and check payments at the Enrollment Centers, and credit card and check payments online.</p>
-    <p>Visit <a href="http://www.tri-c.edu/paying-for-college target="_blank>www.tri-c.edu/paying-for-college</a>for more information</p>
+    <p>Visit <a href="http://www.tri-c.edu/paying-for-college" target="_blank">www.tri-c.edu/paying-for-college</a>for more information</p>
         <p><img src="https://www.tri-c.edu/_files/images/logo.png" alt="triclogo">
         </p>
 <p><a href="tel:+1-216-987-6000">+1 (216) 987-6000</a>
