--- a/lab1.html
+++ b/lab1.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
  <meta charset="utf-8">
-<head>
+<head><style>
+ body{
+  background-color: green;
+ </style>
  <title>Tri.C Play it Safe</title></head>
     <body>
         <h1>PAY IT</h1><p>
