--- a/lab1.html
+++ b/lab1.html
@@ -2,8 +2,9 @@
  <meta charset="utf-8">
 <head><style>
  body{
-  background-color: green;
-  width: 10em;
+  background-color: #009999;
+  width: 12em;
+  margin: auto;
  </style>
  <title>Tri.C Play it Safe</title></head>
     <body>
