--- a/lab1.html
+++ b/lab1.html
@@ -4,8 +4,13 @@
  <style>
  body{
   background-color: #009999;
-  width: 12em;
+  width: 14px;
   margin: auto;
+  text-align: center;
+  color: white;
+  }
+  h2{
+   color: black;
  </style>
  <title>Tri.C Play it Safe</title></head>
     <body>
