--- a/lab1.html
+++ b/lab1.html
@@ -5,17 +5,18 @@
  body{
   background-color: #009999;
   width: 14px;
-  margin: auto;
+  margin: 0 auto;
   text-align: center;
   color: white;
   }
+  
   h2{
-   color: black;
+   color: black;}
+  
  </style>
  <title>Tri.C Play it Safe</title></head>
     <body>
-        <h1>PAY IT</h1><p>
-        <h1>SAFE</h1>
+        <h1>PAY IT SAFE</h1>
 <h2>Starting Feb. 1, 2019</h2>
         <p> For your security, we will no longer accept credit card payments over the phone. We will continue to accept cash and check payments at the Enrollment Centers, and credit card and check payments online.</p>
     <p>Visit <a href="http://www.tri-c.edu/paying-for-college" target="_blank"> www.tri-c.edu/paying-for-college </a> for more information</p>
