--- a/lab1.html
+++ b/lab1.html
@@ -3,22 +3,23 @@
 <head>
  <style>
  body{
-  background-color: #009999;
+  background-color: #018B98;
   width: 14px;
-  margin: 0;
+  margin: auto;
   text-align: center;
   color: white;
   }
   
-  h2{
-   color: black;}
+  .safe{
+   color: #D2DC85;}
   
  </style>
  <title>Tri.C Play it Safe</title></head>
     <body>
-        <h1>PAY IT SAFE</h1>
+        <h1>PAY IT</h1>
+     <p><h1 class="safe">SAFE</h1>
 <h2>Starting Feb. 1, 2019</h2>
-        <p> For your security, we will no longer accept credit card payments over the phone. We will continue to accept cash and check payments at the Enrollment Centers, and credit card and check payments online.</p>
+        <p class="safe"> For your security, we will no longer accept credit card payments over the phone. We will continue to accept cash and check payments at the Enrollment Centers, and credit card and check payments online.</p>
     <p>Visit <a href="http://www.tri-c.edu/paying-for-college" target="_blank"> www.tri-c.edu/paying-for-college </a> for more information</p>
         <p><img src="https://www.tri-c.edu/_files/images/logo.png" alt="triclogo">
         </p>
