--- a/lab1.html
+++ b/lab1.html
@@ -4,7 +4,8 @@
  <style>
  body{
   background-color: #018B98;
-  width: 14px;
+  font-size: 14px;
+  margin: auto;
   text-align: center;
   color: white;
   }
