--- a/lab1.html
+++ b/lab1.html
@@ -7,7 +7,7 @@
   text-align: center;
   color: white;
   margin: 0 auto;
-  padding: 20px;
+  padding: 40px 50px 40px 50px;
   font-size: 20px;
   }
   
