--- a/lab1.html
+++ b/lab1.html
@@ -7,8 +7,9 @@
   text-align: center;
   color: white;
   margin: 0 auto;
-  padding: 40px 50px 40px 50px;
+  padding: 40 50 40 50;
   font-size: 20px;
+  size: 215px 715px;
   }
   
   .safe{
