--- a/lab1.html
+++ b/lab1.html
@@ -6,16 +6,19 @@
   background-color: #018B98;
   text-align: center;
   color: white;
-  margin: 0 auto;
-  padding: 40 50 40 50;
   font-size: 20px;
-  size: 215px;
   }
+  
+  div{
+   margin: 0 auto;
+   height: 75%; 
+   width: 215px;
   
   .safe{
    color: #D2DC85;}
   
  </style>
+ <div>
  <title>Tri.C Play it Safe</title></head>
     <body>
         <h1>PAY IT</h1>
@@ -26,5 +29,5 @@
         <p><img src="https://www.tri-c.edu/_files/images/logo.png" alt="triclogo">
         </p>
 <p><a href="tel:+1-216-987-6000">+1 (216) 987-6000</a>
-</body>
+     </div></body>
 </html>
