--- a/lab1.html
+++ b/lab1.html
@@ -31,7 +31,11 @@ html{
    font-size: 30px;
    margin: 40px 0 30px 0;
   }
-  
+  .main{
+   margin: 80px 0 10px 0;
+   width: 300px;
+   height: auto;
+  }
   .main h1{
    font-family: sans-serif;
    font-size: 80px;
