--- a/lab1.html
+++ b/lab1.html
@@ -20,6 +20,8 @@ html{
  color: white;
  padding-top: 30px;
  padding-bottom: 30px;
+ width: 380px;
+ align-self:center;
   }
   .link a{
    font-family: serif;
@@ -43,11 +45,12 @@ html{
    height: auto;
    text-align: center;
   }
-  
   .text{
    color: #D2DC85;
    font-family: serif;
    font-weight: 540;
+   width: 380px;
+   align-self: center;
   }
   .green{
    color: #D2DC85;
