--- a/lab1.html
+++ b/lab1.html
@@ -60,7 +60,7 @@ html{
    width: 75px;
   }
  </style>
- <title>Tri.C Play it Safe</title></head>
+ <title>Tri.C Pay it Safe</title></head>
     <body>
          <div class="flex-container">
           <div class="main"><h1>PAY IT</h1>
