--- a/lab1.html
+++ b/lab1.html
@@ -67,7 +67,7 @@ html{
            <p><h1 class="green">SAFE</h1></div>
           
           <div><h2>Starting Feb. 1, 2019</h2></div>
-        <div class="text" style="color:red"> For your security, we will no longer accept credit card payments over the phone. 
+        <div class="text"> For your security, we will no longer accept credit card payments over the phone. 
          We will continue to accept cash and check payments at the Enrollment Centers, and credit card and check 
          payments online.</div>
           
